--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,8 @@ clap = { version = "4.5.18", features = ["derive"] }
 clap_complete = "4.5.7"
 glob = "0.3.1"
 natord = "1.0.9"
-owo-colors = "4.1.0"
+owo-colors = { version = "4.1.0", features = ["supports-colors"] }
+fd-lock = "4.0.2"
 
 [dev-dependencies]
 assert_cmd = "2.0.16"
