--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,9 @@ glob = "0.3.1"
 natord = "1.0.9"
 owo-colors = { version = "4.1.0", features = ["supports-colors"] }
 fd-lock = "4.0.2"
+regex = "1.11.1"
+serde = { version = "1.0.214", features = ["derive"] }
+serde_json = "1.0.132"
 
 [dev-dependencies]
 assert_cmd = "2.0.16"
